# protoc-gen-openapi-bazel-example

./: .gitignore  BUILD.googleapi  README.md  WORKSPACE  load.bzl
example/: BUILD.bazel  file.proto
